--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,23 @@
 .App {
-  text-align: center;
   font-family: 'Roboto', sans-serif;
+  text-align: center;
+}
+
+.centered-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .nice-day-form-header {
-  margin-bottom: 5px;
+  margin-bottom: 0;
 }
 
 .slider-input {
   width: 82%;
   max-width: 500px;
   margin: 0 auto;
-  padding: 30px 10px 3px 10px;
+  padding: 20px 10px 3px 10px;
 }
 
 .query-form .MuiFormControl-root {
@@ -28,7 +34,7 @@ p.MuiTypography-gutterBottom {
 }
 
 .results-area {
-  padding: 1.5em 1em;
+  padding: 1.5em 0.5em;
 }
 
 .results-area label {
