--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,39 @@
 body {
   font-family: 'Roboto', sans-serif;
+  margin: 0;
 }
 
-.app-heading {
-  border-bottom: 1px solid rgba(0,0,0,0.2);
-  padding-bottom: 8px;
+.app-header-bar {
+  background: #dce6fd;
+  padding: 0.6em 0;
+}
+
+.header-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-left {
+  display: flex;
+  align-items: center;
+}
+
+.app-title {
+  font-size: 17px;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+.dark-sky-img {
+  margin: 5px 10px 0 10px;
+  height: 30px;
+}
+
+.app-logo {
+  height: 30px;
+  margin-right: 10px;
+  border-radius: 5px;
 }
 
 .better-link {
@@ -23,7 +52,7 @@ body {
 
 .slider-input {
   width: 82%;
-  max-width: 550px;
+  max-width: 700px;
   padding: 20px 15px 3px 15px;
 }
 
@@ -31,8 +60,12 @@ body {
   margin: 0 10px;
 }
 
-.MuiButton-root.submit-btn {
+.submit-line {
   margin: 1.8em 0 1em 0;
+  display: flex;
+}
+
+.MuiButton-root.submit-btn {
   padding: 8px 40px;
 }
 
