--- a/src/App.css
+++ b/src/App.css
@@ -85,13 +85,14 @@ p.MuiTypography-gutterBottom {
 }
 
 .bar-chart-wrapper {
-  width: 70%;
+  width: 95%;
   min-width: 330px;
   max-width: 1000px;
   margin-top: 10px;
-  padding: 20px 15px 10px 10px;
-}
-
-.city-results-card {
-  display: inline-block;
+  padding: 20px 15px 10px 15px;
+  @media (max-width: 450px) {
+    padding: 20px 5px 10px 0;
+    width: 90%;
+    box-shadow: none;
+  }
 }
