--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,29 +3,9 @@ body {
   margin: 0;
 }
 
-.app-header-bar {
-  background: #dce6fd;
-  padding: 0.6em 0;
-  margin-bottom: 24px;
-}
-
-.header-content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.header-left {
-  display: flex;
-  align-items: center;
-}
-
-.app-title {
-  letter-spacing: 0.8px;
-}
-
 .app-logo {
-  height: 45px;
+  display: inline-block;
+  height: 55px;
   margin-right: 16px;
   border-radius: 5px;
 }
@@ -34,74 +14,6 @@ body {
   text-decoration: none;
 }
 
-.centered-block {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.slider-input {
-  width: 82%;
-  max-width: 700px;
-  padding: 20px 15px 3px 15px;
-}
-
-.query-form {
-  margin-top: 16px;
-  display: flex;
-  align-items: center;
-  gap: 12px;
-}
-
-@media (max-width: 650px) {
-  .query-form {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-}
-
-.submit-line {
-  margin: 1.8em 0 1em 0;
-  display: flex;
-}
-
-.MuiButton-root.submit-btn {
-  padding: 8px 40px;
-}
-
 p.MuiTypography-gutterBottom {
   margin-bottom: 15px;
-}
-
-.results-area {
-  padding: 1.5em 0em;
-  min-height: 300px;
-}
-
-.results-area label {
-  margin-right: 10px;
-  font-weight: bold;
-}
-
-.bar-chart-wrapper {
-  width: 95%;
-  min-width: 330px;
-  max-width: 1000px;
-  margin-top: 10px;
-  padding: 20px 15px 10px 15px;
-  @media (max-width: 450px) {
-    padding: 20px 5px 10px 0;
-    width: 90%;
-    box-shadow: none;
-  }
-}
-
-.custom-option {
-  transition: background-color 60ms;
-}
-.custom-option:hover {
-  background-color: #deebff;
-}
-.custom-option--is-selected {
-  background-color: rgb(162, 162, 235);
 }
