--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
-  background-color: #f1efed;
+  height: 100vh;
+  background: linear-gradient(to bottom, #fff, #f7f7e2, #eff0fd);
 }
